# DanmakuParanoia

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.2970a6e  DanPaVM  README.md
DanPaVM/: CMakeLists.txt
DanPaVM/src/: gc.c  instructions.h  interp.c  main.c  syscalls.c  syscalls.h  vm.c  vm.h
resources/: chess.blend  chess.mtl  chessboard.psd  spritesheet.json
resources/particles/: spawn_smoke.json
resources/scripts/: common.dsh  danpa.dsh  script.dps
resources/shaders/: circle_transition.fs  death_shader.fs  grayscale.fs  skybox.fs  skybox.vs
resources/spritesheets/: tobias.psd
src/: main.c
src/animation/: anim_sequence.h  asl_actions.c  asl_handler.c  asl_handler.h  asl_run.c  asl_utils.c  parse_asl.c
src/bckgs/: 3d_obj.h  skybox.h
src/bckgs/impl/raylib/: 3d_obj.c  skybox.c
src/collision/: circle_collision.c  collision.c  collision.h  rect_collision.c  sse_trig.h
src/draw/: animation.c  animation.h  blend_mode.c  blend_mode.h  color.h  draw.h  drawlist.c  drawlist.h  frame_animation.c  frame_animation.h  particles.c  particles.h  shader_fx.h  spriteframe.h  texture.h  vfx.c  vfx.h  zorder.h
src/draw/impl/raylib/: draw.c  shader_fx.c  texture.c
src/draw/vfxs/: screen_shake.c  sheared_rectangle.c
src/engine/: engine.c  engine.h  state.h
src/gameplay/: entity.c  entity.h  gamestate.c  gamestate.h  motion.c  motion.h  motion_simd.h  player.c  player.h  shot.h
src/gameplay/bullet/: bullet.c  bullet.h  bullet_id.h  bullet_impl_macros.h
src/math/: easing.c  easing.h  vector.h
src/resources/: music_handler.h  sfx_handler.h  texture_handler.c  texture_handler.h
src/resources/impl/raylib/: music_handler.c  sfx_handler.c
src/scripting/: properties.c  properties.h  syscalls.c  syscalls.h  vm_drawlist.c  vm_drawlist.h
src/simd/: simd.h  simd_info.h
src/sys/: alloc.c  alloc.h  cleanup.c  cleanup.h  fs.c  fs.h  log.h  support.c  support.h  time.h  window.h
src/sys/impl/raylib/: log.c  time.c  window.c
src/ui/: hud.c  hud.h
src/utils/: benchmark.c  benchmark.h  dynarray.h  hash_table.c  hash_table.h  json.c  json.h  resource_pool.c  resource_pool.h  timed_action.c  timed_action.h  utils.h
thread_support/: CMakeLists.txt  thread_support.cpp  thread_support.h
